z-index correction

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -20,7 +20,7 @@
   opacity:0.8;
   background-color: #ccc;
   left:-1px; top:-1px;
-  z-index: 10000;
+  z-index: 100;
   padding: 5px;
   text-overflow: ellipsis;
   box-sizing: border-box;
@@ -69,6 +69,7 @@
   left:0;
   bottom:0;
   right:0;
+  z-index: 1000;
 }
 
 .add-sign {
